@@ -1,3 +1,7 @@
+2008-07-25  Moritz  <moritz@gnu.org>
+
+	* gettext.m4: New file.
+
 2007-10-28  Moritz  <moritz@g10code.com>
 
 	* gpg-error.m4: New.
